add header component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<h1>Bienvenue sur l'application Mars Gallery</h1>
+<span>Vous êtes passionné.é.s par l'espace ? Iic vous ave accès aux meilleures images de Mars prises par la NASA et vous pourrez créer
+    une galerie des photos qui vous ont le plus marqué.
+</span>
