update footer component and add contact page

--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -1,9 +1,8 @@
-<span>MARS</span>
 <nav>
     <ul>
-        <li><a routerLink="/" >Home</a></li>
+        <li><a routerLink="/home" >Home</a></li>
         <li><a>Photos par jour</a></li>
         <li><a>Galerie</a></li>
-        <li><a>Contact</a></li>
+        <li><a routerLink="/contact" >Contact</a></li>
     </ul>
 </nav>
