--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a routerLink="/home" >Home</a></li>
         <li><a>Photos par jour</a></li>
-        <li><a>Galerie</a></li>
+        <li><a routerLink="/per-days-photos">Galerie</a></li>
         <li><a routerLink="/contact" >Contact</a></li>
     </ul>
 </nav>
