--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<title>Contact</title>
 <h1>Voici l'équipe du projet Mars Gallery</h1>
 <span>Photo</span>
 <h2>Vous avez une question ? Voici un formulaire pour nous contacter</h2>
