--- a/src/app/pages/per-days-photos/per-days-photos.component.html
+++ b/src/app/pages/per-days-photos/per-days-photos.component.html
@@ -3,4 +3,9 @@
 <h1>Dans cette page vous pouve chercher les photos de Mars du jour</h1>
 <h2>Veuillez rentrer la date:</h2>
 <form></form>
-<app-list-images></app-list-images>
+<ul>
+    <app-list-images
+    *ngFor="let photo of marsPhotos"
+    [imageURL]="photo.img_src"
+    ></app-list-images>
+</ul>
