/home design ok

--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
+<ul>
+    <li><a routerLink="/home" >Home</a></li>
+    <li><a>Photos par jour</a></li>
+    <li><a routerLink="/per-days-photos">Galerie</a></li>
+    <li><a routerLink="/contact" >Contact</a></li>
+</ul>
 <span>Mars Gallery © 2021</span>
