--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,19 @@
 <app-header></app-header>
-<title>Home</title>
-<h1>Bienvenue sur l'application Mars Gallery</h1>
-<span>Vous êtes passionné.é.s par l'espace ? Iic vous ave accès aux meilleures images de Mars prises par la NASA et vous pourrez créer
-    une galerie des photos qui vous ont le plus marqué.
-</span>
+<div [ngStyle]="{'padding-top.px': 50, 'padding-bottom.px': 50, 'padding-left.%': 10, 'padding-right.%': 10,  'display' : 'flex', 'flex-direction' : 'column', 'align-items' : 'center'}" >
+    <div>
+        <img 
+        src="assets/img/1getoffmars.jpeg" 
+        alt="home image"
+        [ngStyle]="{'width.%': 100}"
+        >
+    </div>
+    <div [ngStyle]="{'display': 'flex', 'flex-direction' : 'column', 'justify-items' : 'center', 'align-items' : 'center', 'border-top' : 'black 1px solid', 'width.%' : 80, 'margin-top.px' : 100 }">
+        <div [ngStyle]="{'padding.px': 50, 'display': 'flex', 'flex-direction' : 'column', 'align-items' : 'center'}">
+            <span [ngStyle]="{'margin.px' : 30}" >Bienvenue sur l'application Mars Gallery</span>
+            <span>Vous êtes passionné.é.s par l'espace ? Iic vous ave accès aux meilleures images de Mars prises par la NASA et vous pourrez créer
+                une galerie des photos qui vous ont le plus marqué.
+            </span>
+        </div>
+    </div>
+</div>
 <app-footer></app-footer>
