show images with service

--- a/src/app/pages/per-days-photos/per-days-photos.component.html
+++ b/src/app/pages/per-days-photos/per-days-photos.component.html
@@ -5,7 +5,7 @@
 <form></form>
 <ul>
     <app-list-images
-    *ngFor="let photo of marsPhotos"
+    *ngFor="let photo of marsPhotos.photos"
     [id]="photo.id"
     [url]="photo.img_src"
     ></app-list-images>
